--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,7 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>\
+    <style>
+        body{
+            background: #11223d;
+        }
+        .completed{
+            display: none;
+        }
+        .compeletedtask{
+            text-decoration: line-through;
+        }
+        #done{
+            position: absolute;
+            left: 50%;
+        }
+    </style>
     <title>Document</title>
 </head>
 
