--- a/views/register.ejs
+++ b/views/register.ejs
@@ -5,7 +5,7 @@
         <a href="/login" class="btn btn-danger btn-sm">Login</a>
     </div>
 </nav>
-<div class="container my-5 " style="top: 50%;left: 50%;position: 
+<div class="container" style="top: 50%;left: 50%;position: 
 absolute; transform: translate(-50%,-50%);
 background: #1b3763;width: 100%; height: 150px; display: block;border-radius: 20px;">
     <form action="/register" method="post" class="d-flex p-2" style="top: 50%;left: 50%;position: 
